<resources>
    <string name="app_name">TD_Insta</string>
    <string name="edittext_email">Phone number, email or username</string>
    <string name="edittext_password">Password</string>
    <string name="login">Log in</string>
    <string name="forgot">Forgot your login ? Get help logging in.</string>
    <string name="or">OR</string>
    <string name="with_fb">Login with facebook</string>
    <string name="signup">"Don't have an account ? Sign up."</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>