<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/global_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <LinearLayout
            android:id="@+id/insta_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/instagram_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@mipmap/insta_logo" />

            <ImageView
                android:id="@+id/instagram_logo_text"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@mipmap/insta_logo_text" />
        </LinearLayout>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/edittext_email"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/edittext_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="#03A9F4"
            android:text="@string/login"
            app:cornerRadius="4dp"
            app:iconTint="#03A9F4" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textColor="@color/primary_text"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/OR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/with_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with_fb"
            android:textColor="@color/primary_blue"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/signup"
            android:textColor="@color/primary_text" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>